--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
     "expo": "~47.0.12",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -20,6 +22,8 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "prettier": "^2.8.3",
     "typescript": "^4.6.3"
   },
   "private": true
