--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/willian-moreno/nlw-setup-ignite#readme",
   "devDependencies": {
+    "prettier": "^2.8.3",
     "prisma": "^4.9.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
