--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,21 @@
   },
   "homepage": "https://github.com/willian-moreno/nlw-setup-ignite#readme",
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "prettier": "^2.8.3",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.11.0"
+    "fastify": "^4.11.0",
+    "moment": "^2.29.4",
+    "zod": "^3.20.2"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
