--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "axios": "^1.2.6",
+    "clsx": "^1.2.1",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
@@ -24,6 +32,8 @@
     "@types/react-native": "~0.70.6",
     "babel-plugin-module-resolver": "^5.0.0",
     "prettier": "^2.8.3",
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
   },
   "private": true
