--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-popover": "^1.0.3",
+    "@radix-ui/react-progress": "^1.0.1",
+    "clsx": "^1.2.1",
+    "install": "^0.13.0",
+    "npm": "^9.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
